// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimatedCostsAndCredits renders correctly with 2 projects and project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $6.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="usage-charges-item-container__summary__name-container__hide-image">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.328889 13.6272C-0.10963 13.1302 -0.10963 12.3243 0.328889 11.8273L4.58792 7L0.328889 2.17268C-0.10963 1.67565 -0.10963 0.869804 0.328889 0.372774C0.767408 -0.124258 1.47839 -0.124258 1.91691 0.372774L7.76396 7L1.91691 13.6272C1.47839 14.1243 0.767409 14.1243 0.328889 13.6272Z" fill="#2683FF"></path>
          </svg> <span>projectName</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="usage-charges-item-container__summary__name-container__hide-image">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.328889 13.6272C-0.10963 13.1302 -0.10963 12.3243 0.328889 11.8273L4.58792 7L0.328889 2.17268C-0.10963 1.67565 -0.10963 0.869804 0.328889 0.372774C0.767408 -0.124258 1.47839 -0.124258 1.91691 0.372774L7.76396 7L1.91691 13.6272C1.47839 14.1243 0.767409 14.1243 0.328889 13.6272Z" fill="#2683FF"></path>
          </svg> <span>projectName1</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
  </div>
</div>
`;

exports[`EstimatedCostsAndCredits renders correctly with project and no project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $0.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
  </div>
</div>
`;

exports[`EstimatedCostsAndCredits renders correctly with project and project usage and charges 1`] = `
<div class="current-month-area">
  <h1 class="current-month-area__costs">USD $3.00</h1> <span class="current-month-area__title">Estimated Charges for May 2020</span>
  <div class="current-month-area__content">
    <p class="current-month-area__content__title">DETAILS</p>
    <div class="usage-charges-item-container item">
      <div class="usage-charges-item-container__summary">
        <div class="usage-charges-item-container__summary__name-container"><svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg" class="usage-charges-item-container__summary__name-container__hide-image">
            <path fill-rule="evenodd" clip-rule="evenodd" d="M0.328889 13.6272C-0.10963 13.1302 -0.10963 12.3243 0.328889 11.8273L4.58792 7L0.328889 2.17268C-0.10963 1.67565 -0.10963 0.869804 0.328889 0.372774C0.767408 -0.124258 1.47839 -0.124258 1.91691 0.372774L7.76396 7L1.91691 13.6272C1.47839 14.1243 0.767409 14.1243 0.328889 13.6272Z" fill="#2683FF"></path>
          </svg> <span>projectName</span></div> <span class="usage-charges-item-container__summary__amount">
            Estimated Total USD $3.00
        </span>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
